<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.santhoshdamodharan.santhoshdamodharan_mapd711_lab_pizzaonline.SizeSelectionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="353dp"
            android:layout_height="49dp"
            android:layout_marginLeft="@dimen/drawable_left_padding"
            android:layout_marginTop="@dimen/top_padding"
            android:text="@string/size_selection"
            android:textColor="@color/head_title"
            android:textSize="@dimen/head_note" />

    </LinearLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:textColor="@color/header_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_padding">


            <RadioButton
                android:id="@+id/radio_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_small"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/menu_text" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/drawable_left_padding"
                android:src="@drawable/pizza_size_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_padding">


            <RadioButton
                android:id="@+id/radio_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_medium"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/menu_text" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/drawable_left_padding"
                android:src="@drawable/pizza_size_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_large"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/menu_text" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/drawable_left_padding"
                android:src="@drawable/pizza_size_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_extra_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_extra_large"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/menu_text" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/drawable_left_padding"
                android:src="@drawable/pizza_size_icon" />
        </LinearLayout>


    </RadioGroup>
</android.support.constraint.ConstraintLayout>
